--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -24,17 +24,30 @@ jobs:
 
       # Clean out dev files
       - run: |
-          rm -rf node_modules assets .git .github .gitignore package.json package-lock.json webpack.config.js postcss.config.js .babelrc
+          mkdir release
+          cp -r . release/advancedcare
+          rm -rf release/advancedcare/node_modules \
+                 release/advancedcare/assets \
+                 release/advancedcare/.git \
+                 release/advancedcare/.github \
+                 release/advancedcare/.gitignore \
+                 release/advancedcare/package.json \
+                 release/advancedcare/package-lock.json \
+                 release/advancedcare/webpack.config.js \
+                 release/advancedcare/postcss.config.js \
+                 release/advancedcare/.babelrc
 
       # Extract version from style.css
       - name: Get theme version
         id: get_version
         run: |
-          VERSION=$(grep -i 'Version:' style.css | awk '{ print $2 }')
+          VERSION=$(grep -i 'Version:' release/advancedcare/style.css | awk '{ print $2 }')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # Create ZIP
-      - run: zip -r advancedcare.zip ./
+      # Create ZIP that contains a single top-level `advancedcare` folder
+      - run: |
+          cd release
+          zip -r ../advancedcare.zip advancedcare
 
       # Create GitHub release with correct version tag
       - uses: softprops/action-gh-release@v2
