--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -23,7 +23,7 @@ jobs:
       - run: npm run build
 
       # Prepare release folder without copying itself
-      - name: Prepare release zip
+      - name: Prepare release files
         run: |
           mkdir -p release/advancedcare
           rsync -av --exclude=.git --exclude=.github --exclude=node_modules --exclude=release \
@@ -37,11 +37,11 @@ jobs:
           VERSION=$(grep -i 'Version:' release/advancedcare/style.css | awk '{ print $2 }')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # Zip the theme
-      - name: Zip theme folder
+      # Zip only the contents of the theme folder, not the folder itself
+      - name: Zip theme contents
         run: |
-          cd release
-          zip -r ../advancedcare.zip advancedcare
+          cd release/advancedcare
+          zip -r ../../advancedcare.zip ./*
 
       # Create GitHub release
       - name: Create GitHub release
