--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -26,9 +26,16 @@ jobs:
       - name: Prepare release files
         run: |
           mkdir -p release/advancedcare
-          rsync -av --exclude=.git --exclude=.github --exclude=node_modules --exclude=release \
-                    --exclude=advancedcare.zip --exclude=*.log --exclude=*.DS_Store \
+          rsync -av --exclude='.git*' --exclude='.github' --exclude='node_modules' --exclude='release' \
+                    --exclude='*.zip' --exclude='*.log' --exclude='*.DS_Store' --exclude='*/.DS_Store' \
                     ./ release/advancedcare
+
+      # Normalize file and folder permissions
+      - name: Normalize permissions
+        run: |
+          cd release/advancedcare
+          find . -type d -exec chmod 755 {} \;
+          find . -type f -exec chmod 644 {} \;
 
       # Extract version from style.css
       - name: Get theme version
@@ -37,11 +44,21 @@ jobs:
           VERSION=$(grep -i 'Version:' release/advancedcare/style.css | awk '{ print $2 }')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # Zip only the contents of the theme folder, not the folder itself
+      # Optional: List structure for sanity
+      - name: Verify structure before zip
+        run: |
+          cd release/advancedcare
+          ls -la
+
+      # Zip only the contents (not the folder)
       - name: Zip theme contents
         run: |
           cd release/advancedcare
-          zip -r ../../advancedcare.zip ./*
+          zip -r ../../advancedcare.zip . -x "*.DS_Store" -x "__MACOSX/*" -x "*/__MACOSX/*"
+
+      # Optional: Verify zip isn't corrupt
+      - name: Test zip integrity
+        run: unzip -t advancedcare.zip
 
       # Create GitHub release
       - name: Create GitHub release
