--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -22,45 +22,46 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      # Prepare release folder without copying itself
+      # Prepare release folder
       - name: Prepare release files
         run: |
           mkdir -p release/advancedcare
-          rsync -av --exclude='.git*' --exclude='.github' --exclude='node_modules' --exclude='release' \
-                    --exclude='*.zip' --exclude='*.log' --exclude='*.DS_Store' --exclude='*/.DS_Store' \
-                    ./ release/advancedcare
+          rsync -av --delete \
+            --exclude='.git*' \
+            --exclude='.github' \
+            --exclude='node_modules' \
+            --exclude='release' \
+            --exclude='*.zip' \
+            --exclude='*.log' \
+            --exclude='*.DS_Store' \
+            --exclude='__MACOSX' \
+            ./ release/advancedcare
 
-      # Normalize file and folder permissions
+      # Normalize permissions for WordPress compatibility
       - name: Normalize permissions
         run: |
           cd release/advancedcare
           find . -type d -exec chmod 755 {} \;
           find . -type f -exec chmod 644 {} \;
 
-      # Extract version from style.css
+      # Extract theme version from style.css
       - name: Get theme version
         id: get_version
         run: |
           VERSION=$(grep -i 'Version:' release/advancedcare/style.css | awk '{ print $2 }')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # Optional: List structure for sanity
-      - name: Verify structure before zip
-        run: |
-          cd release/advancedcare
-          ls -la
-
-      # Zip only the contents (not the folder)
-      - name: Zip theme contents
+      # Final clean zip of theme contents (NO nested folder, NO macOS trash)
+      - name: Create theme zip
         run: |
           cd release/advancedcare
           zip -r ../../advancedcare.zip . -x "*.DS_Store" -x "__MACOSX/*" -x "*/__MACOSX/*"
 
-      # Optional: Verify zip isn't corrupt
-      - name: Test zip integrity
+      # Optional: Test zip integrity
+      - name: Verify zip integrity
         run: unzip -t advancedcare.zip
 
-      # Create GitHub release
+      # Upload release to GitHub
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
         with:
