--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -22,10 +22,10 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      # Prepare release folder
+      # Prepare release folder without nesting theme folder
       - name: Prepare release files
         run: |
-          mkdir -p release/advancedcare
+          mkdir -p release
           rsync -av --delete \
             --exclude='.git*' \
             --exclude='.github' \
@@ -35,12 +35,12 @@ jobs:
             --exclude='*.log' \
             --exclude='*.DS_Store' \
             --exclude='__MACOSX' \
-            ./ release/advancedcare
+            ./ release/
 
       # Normalize permissions for WordPress compatibility
       - name: Normalize permissions
         run: |
-          cd release/advancedcare
+          cd release
           find . -type d -exec chmod 755 {} \;
           find . -type f -exec chmod 644 {} \;
 
@@ -48,20 +48,20 @@ jobs:
       - name: Get theme version
         id: get_version
         run: |
-          VERSION=$(grep -i 'Version:' release/advancedcare/style.css | awk '{ print $2 }')
+          VERSION=$(grep -i 'Version:' release/style.css | awk '{ print $2 }')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # Create WP Engine-safe zip using bsdtar
-      - name: Create theme zip (bsdtar)
+      # Zip ONLY the theme contents (no parent folder)
+      - name: Create theme zip
         run: |
-          cd release/advancedcare
-          bsdtar -cf ../../advancedcare.zip .
+          cd release
+          zip -r ../advancedcare.zip . -x "*.DS_Store" -x "__MACOSX/*"
 
-      # Verify zip integrity (sanity check)
-      - name: Verify zip
+      # Optional: Verify zip
+      - name: Verify zip integrity
         run: unzip -t advancedcare.zip
 
-      # Upload to GitHub release
+      # Upload release
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
         with:
