--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -33,17 +33,18 @@ jobs:
           VERSION=$(grep -i 'Version:' style.css | awk '{ print $2 }')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # ✅ This is the part that matters — no subfolder nesting!
-      - name: Create theme zip
+      # ✅ CLEAN ZIP PROCESS
+      - name: Create clean theme zip
         run: |
-          zip -r advancedcare.zip . \
-            -x "*.git*" \
-            -x ".github/*" \
-            -x "node_modules/*" \
-            -x "release/*" \
-            -x "*.log" \
-            -x "*.DS_Store" \
-            -x "__MACOSX/*"
+          mkdir final
+          rsync -av --exclude=".git*" --exclude=".github" --exclude="node_modules" \
+            --exclude="*.zip" --exclude="*.log" --exclude="*.DS_Store" --exclude="__MACOSX" \
+            ./ final/
+          cd final
+          find . -type d -exec chmod 755 {} \;
+          find . -type f -exec chmod 644 {} \;
+          find . -type f > filelist.txt
+          zip -@ ../advancedcare.zip < filelist.txt
 
       - name: Verify zip integrity
         run: unzip -t advancedcare.zip
