--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -33,7 +33,6 @@ jobs:
           VERSION=$(grep -i 'Version:' style.css | awk '{ print $2 }')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # ✅ Clean, cross-host safe zip build
       - name: Create clean WP Engine–safe zip
         run: |
           mkdir final
@@ -42,14 +41,14 @@ jobs:
             ./ final/
           cd final
 
-          # Remove extended macOS attributes that can break unzip on WP Engine
+          # Remove extended attributes from macOS (fixes WP Engine unzip errors)
           xattr -rc .
 
-          # Normalize permissions (folders 755, files 644)
+          # Normalize permissions
           find . -type d -exec chmod 755 {} \;
           find . -type f -exec chmod 644 {} \;
 
-          # Only zip real files (no empty dirs or junk)
+          # Only include real files in zip
           find . -type f > filelist.txt
           zip -@ ../advancedcare.zip < filelist.txt
 
@@ -59,4 +58,5 @@ jobs:
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.get_version.outputs
+          tag_name: v${{ steps.get_version.outputs.version }}
+          files: advancedcare.zip
