--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -35,19 +35,19 @@ jobs:
 
       - name: Create clean WP Engine–safe zip
         run: |
-          mkdir final
+          mkdir -p final/advancedcare
           rsync -av --exclude=".git*" --exclude=".github" --exclude="node_modules" \
             --exclude="*.zip" --exclude="*.log" --exclude="*.DS_Store" --exclude="__MACOSX" \
-            ./ final/
+            ./ final/advancedcare
+
           cd final
 
           # Normalize permissions
           find . -type d -exec chmod 755 {} \;
           find . -type f -exec chmod 644 {} \;
 
-          # Only include real files in zip
-          find . -type f > filelist.txt
-          zip -@ ../advancedcare.zip < filelist.txt
+          # Create zip with top-level "advancedcare/" folder
+          zip -r ../advancedcare.zip advancedcare
 
       - name: Verify zip integrity
         run: unzip -t advancedcare.zip
